Overflow Fix

--- a/src/app/containers/auto-draft-panel/auto-draft-panel.component.scss
+++ b/src/app/containers/auto-draft-panel/auto-draft-panel.component.scss
@@ -8,7 +8,7 @@
 .left-panel {
     width: 40%;
     height: 100%;
-    min-width: 810px;
+    min-width: 850px;
 }
 
 .right-panel {
@@ -36,5 +36,5 @@
 
 .table-container {
     height: 600px;
-    overflow: auto;
+    overflow-y: auto;
 }
